--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 2 </title>
+    <title>Login DNC</title>
 </head>
 <body>
-    
+        <!-- header cabeçalho da página  -->
+        <header>
+            <h1>Bem-vindos à DNC</h1>
+            <img src="assets/images/logodnc.png">
+        </header>
+        <!-- Main - Área principal da página -->
+        <main>
+            <!-- Form - Formulario / action para onde será enviado / method como sera enviado (post envia de forma oculta)-->
+            <form action="" method="post"> 
+                <!-- Label/Rotulos, usado para associar um elemento de form -->
+                <label>Email:</label>
+                <!-- input é usado para criar vários tipos de controles de formulário interativos -->
+                <input type="email" placeholder="Email@email.com">
+                
+                <label>Senha:</label>
+                <input type="password" placeholder="*******">
+
+                <input type="submit" value="Entrar">
+            </form>
+        </main>
 </body>
 </html>
